--- a/psmobile/src/main/resources/application.properties
+++ b/psmobile/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=psmobile
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=psm
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto=update
